--- a/web/workspace/pages/partials/metatags.dust
+++ b/web/workspace/pages/partials/metatags.dust
@@ -13,13 +13,13 @@
 <meta property="og:title" content="{+title}{i18n.results[0].tagline}{/title}{?title} / DADI{/title}">
 <meta name="description" content="{^page.description}{i18n.results[0].about}{:else}{page.description}{/page.description}">
 <meta name="og:description" content="{^page.description}{i18n.results[0].about}{:else}{page.description}{/page.description}">
-<meta property="og:image" content="{global.protocol}://{host}{pathname}assets/img/og.jpg">
+<meta property="og:image" content="{global.protocol}://{host}/assets/img/og.jpg">
 
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:site" content="@dadi">
 <meta name="twitter:title" content="{+title}{i18n.results[0].tagline}{/title}{?title} / DADI{/title}">
 <meta name="twitter:description" content="{^page.description}{i18n.results[0].about}{:else}{page.description}{/page.description}">
-<meta name="twitter:image" content="{global.protocol}://{host}{pathname}assets/img/og.jpg">
+<meta name="twitter:image" content="{global.protocol}://{host}/assets/img/og.jpg">
 
 <meta name="geo.placename" content="London, UK">
 <meta name="dc.language" content="{params.lang}">
