fix i18n key used for publish
right now shows same text as "API"

--- a/web/workspace/pages/partials/infographic.dust
+++ b/web/workspace/pages/partials/infographic.dust
@@ -125,7 +125,7 @@
   <div class="explainer__blurb b-publish">
     <a href="/{params.lang}/publish/">
       <img src="/assets/products/dadi-publish.png" width="22">
-      <p class="small">{i18n.results[0].infographic_api}</p>
+      <p class="small">{i18n.results[0].infographic_publish}</p>
     </a>
   </div>
 
