--- a/web/workspace/pages/product.dust
+++ b/web/workspace/pages/product.dust
@@ -37,7 +37,7 @@
         <p class="large no-marg-i pad__top--half pad__bottom">{@soberMarkdown}{overview}{/soberMarkdown}</p>
         <p class="no-marg-i">
           {^hide_docs}
-            <a href="http://docs.dadi.tech/{product}/getting-started/installing/" class="btn">{i18n.results[0].install_howto}</a>
+            <a href="http://docs.dadi.tech/#{product}/installation/" class="btn">{i18n.results[0].install_howto}</a>
           {:else}
             <span class="btn btn--disabled">{i18n.results[0].install_soon}</span>
           {/hide_docs}
@@ -46,7 +46,7 @@
         <ul class="list--product normal marg__top--x2">
           <li><a style="border-bottom-color:{color}" href="https://github.com/dadi/{product}" href="https://github.com/dadi/" onclick="ga('send','event','Github','Click','Product');">{i18n.results[0].github_source}</a></li>
           <li><a style="border-bottom-color:{color}" href="https://www.npmjs.com/package/@dadi/{product}" onclick="ga('send','event','NPM','Click','Product');">{i18n.results[0].install_npm}</a></li>
-          {^hide_docs}<li><a style="border-bottom-color:{color}" href="http://docs.dadi.tech/{product}" onclick="ga('send','event','Documentation','Click','Product');">{i18n.results[0].documentation}</a></li>{/hide_docs}
+          {^hide_docs}<li><a style="border-bottom-color:{color}" href="http://docs.dadi.tech/#{product}" onclick="ga('send','event','Documentation','Click','Product');">{i18n.results[0].documentation}</a></li>{/hide_docs}
           <li><a style="border-bottom-color:{color}" href="/{params.lang}/on-demand/" onclick="ga('send','event','On demand','Click','Product');">DADI On-demand</a></li>
           {?demo}<li><a href="{demo}">Live demo</a></li>{/demo}
         </ul>
