--- a/web/workspace/public/assets/css/main.css
+++ b/web/workspace/public/assets/css/main.css
@@ -1080,11 +1080,15 @@ nav ul li a.on {
     padding: 10px 0 0;
     margin-top: 10px; } }
 header {
-  overflow: hidden; }
+  overflow: hidden;
+  padding-bottom: 20px; }
 header nav {
-  padding-bottom: 20px;
-  position: relative; }
+  position: relative;
+  padding-bottom: 20px; }
+body.home header nav {
+  padding-bottom: 0px; }
 body.home header {
+  padding-bottom: 0;
   background: #f9f9f9;
   color: #21262D; }
 .pattern {
