--- a/web/workspace/pages/partials/navigation.dust
+++ b/web/workspace/pages/partials/navigation.dust
@@ -7,6 +7,8 @@
     </li>
     <li><a href="/{params.lang}/support" onclick="ga('send','event','Support','Click','Header');" {@eq key=page.key value="Support"}class="on"{/eq}>{i18n.results[0].support}</a>
     </li>
+    <li><a href="https://forum.dadi.tech/" onclick="ga('send','event','Forum','Click','Header');">Forum</a>
+    </li>
     <li><a href="https://dadi.cloud/" onclick="ga('send','event','DADI ICO','Click','Header');">DADI ICO</a>
     </li>    
   </ol>
