--- a/web/workspace/pages/latest.dust
+++ b/web/workspace/pages/latest.dust
@@ -19,19 +19,12 @@
   <div class="container">
     <div class="grid">
       <div class="col w-2-3">
-        {#latest.results}
-          <p class="txt--grey hdr normal">{@formatDate data=attributes.date parseFormat="YYYY-DD-MMMTh:mm:ss.ZZ" format="Do MMMM YYYY" /}</p>
-          <p class="hdr larger txt--green"><a href="/{params.lang}/latest/{attributes.category}/{attributes.handle}/">{attributes.title}</a></p>
-          <p class="normal">{@soberMarkdown}{attributes.preface}{/soberMarkdown}</p>
-          <p class="small pad__bottom--x2"><a href="/{params.lang}/latest/{attributes.category}/{attributes.handle}/" class="btn btn--green">Read more</a></p>
-        {/latest.results}
-
-        <div class="cf pad__top--x2 pad__bottom--x2 alignc">
-          {>"partials/pagination" 
-            $page=latest.metadata.page 
-            $totalPages=latest.metadata.totalPages 
-          /}
-        </div>
+        {#forum}
+          <p class="txt--grey hdr normal">{@formatDate data=pubDate parseFormat="YYYY-DD-MMMTh:mm:ss.ZZ" format="Do MMMM YYYY" /}</p>
+          <p class="hdr larger txt--green"><a href="{link}">{title}</a></p>
+          <p class="normal">{@soberMarkdown}{@htmlstrip}{@Truncate data="{description|s}" length="200" ellipsis="true"/}{/htmlstrip}{/soberMarkdown}</p>
+          <p class="small pad__bottom--x2"><a href="{link}" class="btn btn--green">Read more</a></p>
+        {/forum}
       </div>
       <div class="col w-1-3">
         {>"partials/latest_sidebar" /}
