fix: change ICO copy

--- a/web/workspace/pages/partials/header.dust
+++ b/web/workspace/pages/partials/header.dust
@@ -9,7 +9,7 @@
 
 {@eq key=page.key value="home"}
 <div class="ico cf">
-  <p class="hdr">Announcing the DADI ICO – opens January 2018</p>
+  <p class="hdr">Announcing the DADI Crowdsale – opens January 2018</p>
   <a href="https://dadi.cloud/" class="btn small">Register for the presale</a>
   <a href="http://dadi.link/id" class="btn small">Read the whitepaper now</a>
 </div>
