--- a/web/workspace/public/assets/css/main.css
+++ b/web/workspace/public/assets/css/main.css
@@ -2258,4 +2258,14 @@ abbr {
   padding: 4px 12px;
   display: inline-block;
   border-radius: 6px; }
+.badge {
+  border-color: #ccc;
+  box-shadow: 1px 1px 3px #ddd;
+  padding: 3px 5px;
+  border-radius: 2px;
+  background: #88c24c;
+  color: #fff;
+  font-size: 12px;
+  vertical-align: middle;
+  margin-left: 6px; }
 /*# sourceMappingURL=main.css.map */
