feat: crowdsale overlap promo
see https://github.com/dadi/crowdsale/issues/28

--- a/web/workspace/pages/index.dust
+++ b/web/workspace/pages/index.dust
@@ -1,5 +1,7 @@
 {>"partials/header" /}
 
+{^hidePromo}{>"partials/promo" /}{/hidePromo}
+
 {<bodyClass}home{/bodyClass}
 
 {>"partials/infographic" /}
